# tetrinal

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  env.hpp  game.hpp  intdef  strlib
include/lib/: strlib
include/rules/: attack_table.hpp  bag.hpp  field.hpp  kick_table.hpp  spin.hpp  tetromino.hpp
include/util/: buffer.hpp  conv.hpp
src/: main.cpp
src/rules/: kick_table.cpp  tetromino.cpp
